Restore introduction.html to original state
Restored the introduction.html file with the original content and structure.

--- a/introduction.html
+++ b/introduction.html
@@ -160,7 +160,7 @@
         <p>Actuellement en première année de BTS Services Informatiques aux Organisations option Solutions d'Infrastructure, Systèmes et Réseaux (SISR) à l'IPSSI de Marne-la Vallée, je suis particulièrement intéressé par les métier en cybersécurité.</p>
         <p>Au cours de ma formation, j'ai pu développer des compétences techniques dans plusieurs domaines clés de l'informatique, notamment la configuration de réseaux avec Cisco Packet Tracer, la mise en place de serveurs Windows Server 2019, la gestion de services DHCP, ainsi que l'utilisation de solutions de virtualisation comme VirtualBox et VMWare. Mon projet pédagogique actuel en SISR me permet d'approfondir ces connaissances techniques, essentielles dans le métier d'administrateur systèmes et réseaux. J'ai également obtenue une certification Cisco au cours de mon année de</p>
         
-        <div class="image-placeholder"><img src="images/adp17.png"></div>
+        <div class="image-placeholder"><img src="adp17.png"></div>
     </main>
 
     <footer>
@@ -180,3 +180,4 @@
     </footer>
 </body>
 </html>
+
